Performance improvements and `appendMessage` method